# pipes-deconstructed

./: LICENSE  Pipes-Deconstructed.hs  README.md  pipes-deconstructed.cabal
