name: pipes-deconstructed
version: 0.1
cabal-version: >= 1.10
license: BSD3
license-file: LICENSE
build-type: Simple
copyright: Chris Mahon 2014
author: Chris Mahon
maintainer: cnmahon@gmail.com
synopsis: Code for blog article 
description: Code for blog article
category: Control, Pipes

executable pipes-deconstructed 
    main-is: Pipes-Deconstructed.hs
    default-language: Haskell2010
    build-depends:
        base         >= 4       && < 5  ,
        pipes        >= 4.1
    ghc-options: -O2 -Wall

